# warp_open

./: .gitignore  AI_CHAT_TEST.md  AI_TERMINAL_SETUP.md  ALL_APPROACHES_SUMMARY.md  ARCHITECTURE.md  AUTOMATED_TESTING_GUIDE.md  AUTONOMOUS_DEVELOPER_GUIDE.md  BUNDLE_README.md  CHANGELOG.md  CHATGPT_REVERSE_ENGINEERING.md  CHATGPT_STATUS_UPDATE.md  CLAUDE_RESUME.md  COMMANDS.md  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DESKTOP_AUTOMATION_SUMMARY.md  DISCOVERY_SUMMARY.md  ENHANCEMENTS_SUMMARY.md  EXECUTION_MODE_GUIDE.md  FEATURES.md  FEATURES_GUIDE.md  FINAL_STATUS.md  FINAL_VERDICT.md  FRIDA_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  IOS_SHORTCUT_GUIDE.md  LICENSE  MEMORY_DUMP_GUIDE.md  MEMORY_DUMP_RESULTS.md  MITMPROXY_SETUP_GUIDE.md  MITMPROXY_TEST_RESULTS.md  Modelfile.dolphin  Modelfile.uncensored  OLLAMA_INTEGRATION_COMPLETE.md  PARITY_PLAN.md  PHASE1_3_COMPLETE_SUMMARY.md  PHASE3_COMPLETE.md  (+107 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  ai_parser.rs  commands.rs  conversation.rs  lib.rs  main.rs  monitoring.rs  ollama.rs  osc_handler.rs  phase1_6_tests.rs  plan_store.rs  policy_store.rs  rollback.rs  scheduler.rs  session.rs  ssh_session.rs  telemetry.rs  test_bridge.rs  test_log.rs  test_runner.rs
src-tauri/tests/: ai_tools_integration.rs  batch_race_tests.rs  command_injection_tests.rs  comprehensive_ai_tools.rs  file_security_tests.rs  full_phase1_6_integration.rs  integration_test.rs  phase1_3_integration.rs  phase2_test.rs  phase3_inproc_runner.rs  phase5_integration.rs  pty_integration.rs  (+4 more)
(+344 files in other folders)
