[package]
name = "warp-tauri"
version = "1.0.0"
description = "Warp_Open Terminal Replacement"
authors = ["davidquinton"]
license = "MIT"
repository = "https://github.com/warp-open/warp_open"
edition = "2021"

[lib]
name = "warp_tauri"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-confirm", "dialog-save", "dialog-open", "dialog-ask", "dialog-message", "fs-read-file", "fs-write-file",
    "clipboard-all",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-set-title",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp_core = { path = "../../warp_core" }
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
shellexpand = "3.1"
tokio-tungstenite = "0.20"
chrono = "0.4.42"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
md5 = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
csv = "1.3"
tempfile = "3.23.0"
ssh2 = "0.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
